[gd_scene load_steps=3 format=3 uid="uid://3kofyxbh3t3i"]

[ext_resource type="Script" path="res://Components/UI/MainMenu/MainMenu.gd" id="1_ko4p6"]
[ext_resource type="Theme" uid="uid://d0il7muicjs3x" path="res://Themes/MainMenuTheme.tres" id="2_tbfhc"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_ko4p6")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0313726, 0.00392157, 0.0980392, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_tbfhc")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_tbfhc")
text = "Main menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme = ExtResource("2_tbfhc")
text = "Play"

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_tbfhc")
text = "Options"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
